# transacted_hollowing

./: .appveyor.yml  CMakeLists.txt  LICENSE  README.md  delete_pending_file.cpp  delete_pending_file.h  hollowing_parts.cpp  hollowing_parts.h  kernel32_undoc.h  main.cpp  ntddk.h  pe_hdrs_helper.cpp  pe_hdrs_helper.h  transacted_file.cpp  transacted_file.h  util.cpp  util.h
